refatoração do código